--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,10 @@
-WOHHHHHHHHOOOOOOOOOOOOOOOOOO!!!!!!!
+<h1>HOME</h1>
+<div class="row">
+  <div class="col-sm-8 col-sm-offset-2">
+    <img src="http://www.w3schools.com/css/paris.jpg" class="img-responsive" alt="paris">
+    <hr>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W3q8Od5qJio"></iframe>
+    </div>
+  </div>
+</div>
